2005-05-06	Jean-Francois Wauthy <pollux@xfce.org>

	* configure.ac, po/bn_IN.po: add bn_IN translations.

2005-03-28	Jasper Huijsmans <jasper@xfce.org>

	* configure.ac, docs/C/xfce4-session.html, docs/Makefile.am,
	  docs/fr, docs/fr/.cvsignore, docs/fr/Makefile.am, docs/fr/images,
	  docs/fr/images/.cvsignore, docs/fr/images/Makefile.am,
	  docs/fr/images/xfsm-advanced.png, docs/fr/images/xfsm-general.png,
	  docs/fr/images/xfsm-splash.png, docs/fr/xfce4-session.html,
	  docs/fr/xfce4-session.xml: Add french doc.

2005-03-27	Francois Le Clainche <fleclainche@xfce.org>

	* icons/128x128/xfce4-session.png, icons/48x48/xfce4-session.png,
	  icons/48x48/xfce4-splash.png, icons/48x48/xfsm-shutdown.png,
	  icons/scalable/xfce4-session.svg,
	  icons/scalable/xfsm-shutdown.svg: Updated icons.

2005-03-17	Benedikt Meurer <benny@xfce.org>

	* settings/splash/module.c(module_test): Properly initialize the
	  engine structure with zero.

2005-02-24	Benedikt Meurer <benny@xfce.org>

	* settings/splash/module.c(module_test): Call start() if provided by
	  a splash engine, so engine developers can properly test their
	  modules.

2005-01-27	Benedikt Meurer <benny@xfce.org>

	* Removed autogenerated files from CVS.
	* Fixed bug #734 by depending on libgnome-2.0, rather than
	  gconf, which pulls in the required path settings.
