@@ -8,10 +8,11 @@ dnl
 
 dnl Version information
 m4_define([xfsm_version_major], [4])
-m4_define([xfsm_version_minor], [2])
+m4_define([xfsm_version_minor], [3])
 m4_define([xfsm_version_micro], [0])
-m4_define([xfsm_version_tag], [cvs])
-m4_define([xfsm_version], [xfsm_version_major().xfsm_version_minor().xfsm_version_micro()xfsm_version_tag()])
+m4_define([xfsm_version_build], [@REVISION@])
+m4_define([xfsm_version_tag], [svn])
+m4_define([xfsm_version], [xfsm_version_major().xfsm_version_minor().xfsm_version_micro()ifelse(xfsm_version_build(), [], [], [xfsm_version_tag()[-r]xfsm_version_build()])])
 
 dnl Initialize autoconf
 AC_COPYRIGHT([Copyright (c) 2003-2005
