@@ -1,3 +1,11 @@
+2005-07-14	Benedikt Meurer <benny@xfce.org>
+
+	* autogen.sh, configure.in.in: Merge framework changes from Thunar.
+	* configure.in.in: Bump version to 4.3.0svn.
+	* libxfsm/xfsm-util.c(xfsm_window_add_border): Apply Patch from Ori
+	  Bernstein to fix the border color of the shutdown dialog, as specified
+	  in bug #747.
+
 2005-05-06	Jean-Francois Wauthy <pollux@xfce.org>
 
 	* configure.ac, po/bn_IN.po: add bn_IN translations.
